following card complete

--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,12 @@
   }
   
   .app{
-    overflow: hidden;
+    overflow-x: hidden;
     color: var(--black);
     background: #f3f3f3;
     padding: 1rem;
+    width: 100vw;
+    height: 100vh;
   }
   .blur{
     position: absolute;
@@ -27,4 +29,21 @@
     border-radius: 50%;
     background: #a6ddf0;
     filter: blur(72px);
+  }
+  .button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border: none;
+    border-radius: .6rem;
+    background: var(--buttonBg);
+    transition: all 100ms ease-in-out;
+    
+  }
+  .button:hover{
+    cursor: pointer;
+    color: orange;
+    background: transparent;
+    border: 2px solid var(--orange)
   }
