--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
     width: 100vw;
     height: 100vh;
   }
+  .app .container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
   .blur{
     position: absolute;
     width: 22rem;
